# OMC-PT

./: .env.example  AGENTS.md  README.md  ia.py  main.py  omc.md  pyproject.toml  skills-lock.json
app/: main.py
app/api/: dependencies.py
app/api/routers/: __init__.py  leads.py
app/core/: __init__.py  config.py
app/db/: database.py  enums.py
app/db/models/: __init__.py  lead.py
app/db/repositories/: __init__.py  lead_repository.py
app/db/schemas/: __init__.py  lead.py
app/services/: __init__.py  ai_service.py  lead_service.py
scripts/: seed_leads.py
tests/: conftest.py  test_leads_api.py  test_seed_script.py
